--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/c474e68388.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
@@ -19,7 +19,9 @@
         <h1>Todo List</h1>
         <section class="input-area">
             <input type="text" id="text-input">
-            <button id="add-button">+</button>
+            <button class="button" id="add-button">
+                <i class="fa-solid fa-plus"></i>
+            </button>
         </section>
         <section class="task-area">
             <div class="task-tabs">
