--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
         </section>
         <section class="task-area">
             <div class="task-tabs">
-                <div id="under-line"></div>
-                <div>
+                <div id="all" class="selected-tab">
                     모두
                 </div>
-                <div>
+                <div id="ongoing">
                     진행중
                 </div>
-                <div>
+                <div id="done">
                     끝남
                 </div>
             </div>
